--- a/JinHuiJXC/Web.config
+++ b/JinHuiJXC/Web.config
@@ -11,6 +11,18 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+    <authentication mode="Forms">
+      <forms loginUrl="Login.html"
+           protection="All"
+           timeout="6000"
+           name="AuthCookies" 
+           path="/"
+           requireSSL="false"
+           slidingExpiration="true"
+           defaultUrl="Login.html"
+           cookieless="UseDeviceProfile"
+           enableCrossAppRedirects="false" />
+    </authentication>
   </system.web>
   <system.webServer>
     <handlers>
@@ -19,16 +31,16 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-        <defaultDocument>
-            <files>
-                <clear />
-                <add value="index.html" />
-                <add value="Default.htm" />
-                <add value="Default.asp" />
-                <add value="index.htm" />
-                <add value="iisstart.htm" />
-            </files>
-        </defaultDocument>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.html" />
+        <add value="Default.htm" />
+        <add value="Default.asp" />
+        <add value="index.htm" />
+        <add value="iisstart.htm" />
+      </files>
+    </defaultDocument>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
