--- a/JinHuiJXC/JinHuiJXC.csproj
+++ b/JinHuiJXC/JinHuiJXC.csproj
@@ -96,7 +96,8 @@
     <Content Include="Goods\Edit.html" />
     <Content Include="Goods\Index.html" />
     <Content Include="Goods\Show.html" />
-    <Content Include="Index.html" />
+    <Content Include="Main.html" />
+    <Content Include="Login.html" />
     <Content Include="Member\Add.html" />
     <Content Include="Member\Edit.html" />
     <Content Include="Member\Index.html" />
@@ -151,6 +152,7 @@
     <Compile Include="Controllers\TypePackController.cs" />
     <Compile Include="Controllers\TypePayController.cs" />
     <Compile Include="Controllers\TypeReceiptController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\WarehouseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -212,9 +214,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:52382/</IISUrl>
+          <IISUrl>http://localhost:88/</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>http://localhost:52382/</IISAppRootUrl>
+          <IISAppRootUrl>http://localhost:88/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
